<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hello ButterKnife</string>

    <!-- RegisterActivity -->
    <string name="title_activity_register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="message" formatted="false">%s is a %s who lives at %s, %s. You can contact %s via %s</string>
    <string name="him">him</string>
    <string name="her">her</string>
    <string name="submit">Submit</string>

    <string-array name="continents">
        <item>Africa</item>
        <item>Antarctica</item>
        <item>Asia</item>
        <item>Australia</item>
        <item>Europe</item>
        <item>North America</item>
        <item>South America</item>
    </string-array>

    <!-- BillingShippingActivity -->
    <string name="title_activity_billing_shipping">Billing &amp; Shipping</string>
    <string name="billing_address">Billing Address</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="same_as_billing">Same as billing address</string>
    <string name="typeface_alex_brush">typefaces/AlexBrush-Regular.ttf</string>
    <string name="typeface_quicksand">typefaces/Quicksand-Regular.otf</string>

    <!-- NewsActivity -->
    <string name="title_activity_news">News</string>
    <string name="author">Author</string>
    <string name="in"> in </string>
    <string name="category">Category</string>
    <string name="news_title">News Title</string>
    <string name="comments">Comments</string>
    <string name="dot">•</string>
    <string name="website">Website</string>
    <string name="display_time">Display Time</string>

    <!-- TrafficLightsActivity -->
    <string name="title_activity_traffic_lights">Traffic Lights</string>

    <!-- CreditCardActivity -->
    <string name="title_activity_payment_method">Payment Method</string>
    <string name="credit_card">Credit Card</string>
    <string name="credit_card_hint">3566 0020 2036 0505</string>

</resources>
