<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/authorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textColor="@color/author"
        android:layout_marginRight="5dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/authorTextView"
        android:layout_toEndOf="@id/authorTextView"
        android:text="@string/in"
        android:layout_marginRight="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/categoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/authorTextView"
        android:layout_toEndOf="@id/in"
        android:text="@string/category"
        android:textColor="@color/category"
        android:textStyle="bold"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/authorTextView"
        android:paddingTop="5dp"
        android:text="@string/news_title"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/commentsCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/author"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/commentsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:text="@string/comments"
            android:textColor="@color/author"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/dot"
            android:textColor="@color/author"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/websiteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:textColor="@color/author"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/dot"
            android:textColor="@color/author"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/displayTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_time"
            android:textColor="@color/author"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>
