<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context="com.codeherenow.butterknife.BillingShippingActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/billingFullNameEditText"
        android:autoText="false"
        android:hint="@string/full_name"
        android:layout_below="@+id/billingAddressTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/billing_address"
        android:id="@+id/billingAddressTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine|textPostalAddress"
        android:ems="10"
        android:id="@+id/billingAddressEditText"
        android:layout_below="@+id/billingFullNameEditText"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/billingFullNameEditText"
        android:minLines="3"
        android:hint="@string/address"
        android:gravity="top"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/billingPhoneEditText"
        android:layout_below="@+id/billingAddressEditText"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/billingAddressEditText"
        android:hint="@string/phone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="20dp"
        android:text="@string/shipping_address"
        android:id="@+id/shippingAddressTextView"
        android:layout_below="@+id/billingPhoneEditText"
        android:layout_alignParentStart="true"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/same_as_billing"
        android:id="@+id/sameAddressCheckBox"
        android:layout_below="@+id/shippingAddressTextView"
        android:layout_alignParentStart="true"
        android:checked="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/shippingFullNameEditText"
        android:layout_below="@+id/sameAddressCheckBox"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/billingPhoneEditText"
        android:hint="@string/full_name"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine|textPostalAddress"
        android:ems="10"
        android:id="@+id/shippingAddressEditText"
        android:layout_below="@+id/shippingFullNameEditText"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/shippingFullNameEditText"
        android:minLines="3"
        android:hint="@string/address"
        android:gravity="top"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/shippingPhoneEditText"
        android:layout_below="@+id/shippingAddressEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/phone"/>

</RelativeLayout>

<!--
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.codeherenow.butterknife.ActionSetterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </RelativeLayout>
</ScrollView>
-->
